Added primeng and tailwindcss for the ui part

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,6 +10,7 @@
     </a>
   </div>
   <p>Click on the logos to learn more about the frameworks</p>
+  <h1 class="text-3xl font-bold underline">Hello world!</h1>
 
   <form class="row" (submit)="greet($event, greetInput.value)">
     <input #greetInput id="greet-input" placeholder="Enter a name..." />
