--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div class="container mx-auto p-6">
+<div class="container mx-auto p-4">
   <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
     <div>
       <form class="row" (submit)="greet($event, greetInput.value)">
@@ -9,9 +9,13 @@
     </div>
 
     <div>
-      <app-histogram />
+      <app-histogram
+        [labels]="['Jan', 'Feb', 'Mar', 'Apr', 'May', 'Jun']"
+        [dataValues]="[65, 59, 80, 81, 56, 55]"
+        [title]="'Sales Data'"
+      />
     </div>
-  </div>
 
-  <router-outlet />
+    <router-outlet />
+  </div>
 </div>
